# kore

./: .gitignore  CHANGELOG.md  architecture.json  arrow-animation.json  bouncing-circle.json  capture-lottie-gif.py  colors.json  create-architecture-lottie.py  create-lottie-python.py  diagram-editor.html  dog.json  lottie-to-gif.py  preview-architecture.html  preview-arrow.html  preview-bouncing.html
knowledge/: mindmap.md  mindmap_algo.md
kore/: CHANGELOG.md  architecture1.json  architecture1.md  architecture2.json  architecture2.md  architecture_layout.py  architecture_lottie.py  architecture_parser.py  cli.py  kore_cli.py  kore_parser.py  main.py  mindmap_renderer.py  preview-agentic-ai.html  preview-architecture1.html  preview-architecture2.html  pyproject.toml
kore/gui/: main.js  package-lock.json  package.json
kore/gui/public/: index.html
kore/resources/: mindmap.expand.json
kore/samples/: agentic_ai.json  agentic_ai.kore  git.kore  mindmap_show.kore
kore/spec/: GALLERY.md  PHILOSOPHY.md
kore/tests/mindmap/: cli.test.js
samples/: cat.kore  cat.meta.json  dog.kore  mindmap.kore  mindmap_show.kore
tools/: pyproject.toml
tools/kore_tools/: __init__.py  gemini.py
