[project]
name = "kore"
version = "0.1.0"
description = "Transform thinking into illustrations and animations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["playwright", "pillow"]

[project.scripts]
kore = "kore_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["kore_cli.py", "kore_parser.py"]
